src/objects/Replacement_Part__c.object
<CustomObject>
    <fields>
        <fullName>Bike__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bike</label>
        <referenceTo>Bike__c</referenceTo>
        <relationshipLabel>Replacement Parts</relationshipLabel>
        <relationshipName>Replacement_Parts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(Bike__r.Currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Replacement Part</label>
    <nameField>
        <label>Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Replacement Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Price_must_be_greater_than_0</fullName>
        <active>true</active>
        <errorConditionFormula>Price__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Price__c</errorDisplayField>
        <errorMessage>Price must be greater than 0</errorMessage>
    </validationRules>
</CustomObject>